grammar/y.output

state 0
	$accept: .program $end 
	program: .    (2)

	IDENTIFIER  shift 12
	FUNC  shift 7
	STRUCT  shift 8
	LEFT_BRACKET  shift 11
	.  reduce 2 (src line 87)

	program  goto 1
	declaration  goto 3
	function_decl  goto 4
	struct_decl  goto 5
	global_var_decl  goto 6
	declaration_list  goto 2
	type  goto 9
	identifier  goto 10

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  declaration_list.EOF 
	declaration_list:  declaration_list.declaration 

	IDENTIFIER  shift 12
	FUNC  shift 7
	STRUCT  shift 8
	LEFT_BRACKET  shift 11
	EOF  shift 13
	.  error

	declaration  goto 14
	function_decl  goto 4
	struct_decl  goto 5
	global_var_decl  goto 6
	type  goto 9
	identifier  goto 10

state 3
	declaration_list:  declaration.    (3)

	.  reduce 3 (src line 96)


state 4
	declaration:  function_decl.    (5)

	.  reduce 5 (src line 104)


state 5
	declaration:  struct_decl.    (6)

	.  reduce 6 (src line 106)


state 6
	declaration:  global_var_decl.    (7)

	.  reduce 7 (src line 107)


state 7
	function_decl:  FUNC.identifier LEFT_PAREN parameter_list RIGHT_PAREN type block_stmt 
	function_decl:  FUNC.identifier LEFT_PAREN RIGHT_PAREN type block_stmt 
	function_decl:  FUNC.identifier LEFT_PAREN parameter_list RIGHT_PAREN block_stmt 
	function_decl:  FUNC.identifier LEFT_PAREN RIGHT_PAREN block_stmt 
	function_decl:  FUNC.identifier LEFT_PAREN parameter_list RIGHT_PAREN ARROW type block_stmt 
	function_decl:  FUNC.identifier LEFT_PAREN RIGHT_PAREN ARROW type block_stmt 

	IDENTIFIER  shift 12
	.  error

	identifier  goto 15

state 8
	struct_decl:  STRUCT.identifier LEFT_BRACE struct_field_list RIGHT_BRACE 
	struct_decl:  STRUCT.identifier LEFT_BRACE RIGHT_BRACE 

	IDENTIFIER  shift 12
	.  error

	identifier  goto 16

state 9
	global_var_decl:  type.identifier SEMICOLON 
	global_var_decl:  type.identifier ASSIGN expression SEMICOLON 

	IDENTIFIER  shift 12
	.  error

	identifier  goto 17

state 10
	type:  identifier.    (24)

	.  reduce 24 (src line 239)


state 11
	type:  LEFT_BRACKET.IDENTIFIER RIGHT_BRACKET type 
	type:  LEFT_BRACKET.RIGHT_BRACKET type 

	IDENTIFIER  shift 18
	RIGHT_BRACKET  shift 19
	.  error


state 12
	identifier:  IDENTIFIER.    (77)

	.  reduce 77 (src line 581)


state 13
	program:  declaration_list EOF.    (1)

	.  reduce 1 (src line 78)


state 14
	declaration_list:  declaration_list declaration.    (4)

	.  reduce 4 (src line 100)


state 15
	function_decl:  FUNC identifier.LEFT_PAREN parameter_list RIGHT_PAREN type block_stmt 
	function_decl:  FUNC identifier.LEFT_PAREN RIGHT_PAREN type block_stmt 
	function_decl:  FUNC identifier.LEFT_PAREN parameter_list RIGHT_PAREN block_stmt 
	function_decl:  FUNC identifier.LEFT_PAREN RIGHT_PAREN block_stmt 
	function_decl:  FUNC identifier.LEFT_PAREN parameter_list RIGHT_PAREN ARROW type block_stmt 
	function_decl:  FUNC identifier.LEFT_PAREN RIGHT_PAREN ARROW type block_stmt 

	LEFT_PAREN  shift 20
	.  error


state 16
	struct_decl:  STRUCT identifier.LEFT_BRACE struct_field_list RIGHT_BRACE 
	struct_decl:  STRUCT identifier.LEFT_BRACE RIGHT_BRACE 

	LEFT_BRACE  shift 21
	.  error


state 17
	global_var_decl:  type identifier.SEMICOLON 
	global_var_decl:  type identifier.ASSIGN expression SEMICOLON 

	ASSIGN  shift 23
	SEMICOLON  shift 22
	.  error


state 18
	type:  LEFT_BRACKET IDENTIFIER.RIGHT_BRACKET type 

	RIGHT_BRACKET  shift 24
	.  error


state 19
	type:  LEFT_BRACKET RIGHT_BRACKET.type 

	IDENTIFIER  shift 12
	LEFT_BRACKET  shift 11
	.  error

	type  goto 25
	identifier  goto 10

state 20
	function_decl:  FUNC identifier LEFT_PAREN.parameter_list RIGHT_PAREN type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN.RIGHT_PAREN type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN.parameter_list RIGHT_PAREN block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN.RIGHT_PAREN block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN.parameter_list RIGHT_PAREN ARROW type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN.RIGHT_PAREN ARROW type block_stmt 

	IDENTIFIER  shift 12
	RIGHT_PAREN  shift 27
	.  error

	parameter  goto 28
	parameter_list  goto 26
	identifier  goto 29

state 21
	struct_decl:  STRUCT identifier LEFT_BRACE.struct_field_list RIGHT_BRACE 
	struct_decl:  STRUCT identifier LEFT_BRACE.RIGHT_BRACE 

	IDENTIFIER  shift 12
	RIGHT_BRACE  shift 31
	.  error

	struct_field  goto 32
	struct_field_list  goto 30
	identifier  goto 33

state 22
	global_var_decl:  type identifier SEMICOLON.    (8)

	.  reduce 8 (src line 109)


state 23
	global_var_decl:  type identifier ASSIGN.expression SEMICOLON 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	expression  goto 34
	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 36
	binary_expr  goto 35
	identifier  goto 41

state 24
	type:  LEFT_BRACKET IDENTIFIER RIGHT_BRACKET.type 

	IDENTIFIER  shift 12
	LEFT_BRACKET  shift 11
	.  error

	type  goto 44
	identifier  goto 10

state 25
	type:  LEFT_BRACKET RIGHT_BRACKET type.    (26)

	.  reduce 26 (src line 255)


state 26
	function_decl:  FUNC identifier LEFT_PAREN parameter_list.RIGHT_PAREN type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN parameter_list.RIGHT_PAREN block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN parameter_list.RIGHT_PAREN ARROW type block_stmt 
	parameter_list:  parameter_list.COMMA parameter 

	RIGHT_PAREN  shift 45
	COMMA  shift 46
	.  error


state 27
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN.type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN.block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN.ARROW type block_stmt 

	IDENTIFIER  shift 12
	LEFT_BRACE  shift 50
	LEFT_BRACKET  shift 11
	ARROW  shift 49
	.  error

	block_stmt  goto 48
	type  goto 47
	identifier  goto 10

state 28
	parameter_list:  parameter.    (18)

	.  reduce 18 (src line 207)


state 29
	parameter:  identifier.type 

	IDENTIFIER  shift 12
	LEFT_BRACKET  shift 11
	.  error

	type  goto 51
	identifier  goto 10

state 30
	struct_decl:  STRUCT identifier LEFT_BRACE struct_field_list.RIGHT_BRACE 
	struct_field_list:  struct_field_list.struct_field 

	IDENTIFIER  shift 12
	RIGHT_BRACE  shift 52
	.  error

	struct_field  goto 53
	identifier  goto 33

state 31
	struct_decl:  STRUCT identifier LEFT_BRACE RIGHT_BRACE.    (17)

	.  reduce 17 (src line 199)


state 32
	struct_field_list:  struct_field.    (21)

	.  reduce 21 (src line 223)


state 33
	struct_field:  identifier.type SEMICOLON 

	IDENTIFIER  shift 12
	LEFT_BRACKET  shift 11
	.  error

	type  goto 54
	identifier  goto 10

state 34
	global_var_decl:  type identifier ASSIGN expression.SEMICOLON 

	SEMICOLON  shift 55
	.  error


state 35
	expression:  binary_expr.    (49)
	binary_expr:  binary_expr.PLUS binary_expr 
	binary_expr:  binary_expr.MINUS binary_expr 
	binary_expr:  binary_expr.STAR binary_expr 
	binary_expr:  binary_expr.SLASH binary_expr 
	binary_expr:  binary_expr.PERCENT binary_expr 
	binary_expr:  binary_expr.EQUAL binary_expr 
	binary_expr:  binary_expr.NOT_EQUAL binary_expr 
	binary_expr:  binary_expr.LESS binary_expr 
	binary_expr:  binary_expr.LESS_EQUAL binary_expr 
	binary_expr:  binary_expr.GREATER binary_expr 
	binary_expr:  binary_expr.GREATER_EQUAL binary_expr 
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 

	PLUS  shift 56
	MINUS  shift 57
	STAR  shift 58
	SLASH  shift 59
	PERCENT  shift 60
	EQUAL  shift 61
	NOT_EQUAL  shift 62
	LESS  shift 63
	LESS_EQUAL  shift 64
	GREATER  shift 65
	GREATER_EQUAL  shift 66
	AND  shift 67
	OR  shift 68
	.  reduce 49 (src line 384)


state 36
	binary_expr:  unary_expr.    (50)

	.  reduce 50 (src line 387)


state 37
	unary_expr:  call_expr.    (64)
	call_expr:  call_expr.LEFT_PAREN argument_list RIGHT_PAREN 
	call_expr:  call_expr.LEFT_PAREN RIGHT_PAREN 
	call_expr:  call_expr.LEFT_BRACKET expression RIGHT_BRACKET 
	call_expr:  call_expr.DOT identifier 

	LEFT_PAREN  shift 69
	LEFT_BRACKET  shift 70
	DOT  shift 71
	.  reduce 64 (src line 494)


state 38
	unary_expr:  MINUS.unary_expr 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 72
	identifier  goto 41

state 39
	unary_expr:  NOT.unary_expr 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 73
	identifier  goto 41

state 40
	call_expr:  primary_expr.    (67)

	.  reduce 67 (src line 511)


state 41
	primary_expr:  identifier.    (74)

	.  reduce 74 (src line 550)


 42: reduce/reduce conflict  (red'ns 75 and 77) on PLUS
 42: reduce/reduce conflict  (red'ns 75 and 77) on MINUS
 42: reduce/reduce conflict  (red'ns 75 and 77) on STAR
 42: reduce/reduce conflict  (red'ns 75 and 77) on SLASH
 42: reduce/reduce conflict  (red'ns 75 and 77) on PERCENT
 42: reduce/reduce conflict  (red'ns 75 and 77) on EQUAL
 42: reduce/reduce conflict  (red'ns 75 and 77) on NOT_EQUAL
 42: reduce/reduce conflict  (red'ns 75 and 77) on LESS
 42: reduce/reduce conflict  (red'ns 75 and 77) on LESS_EQUAL
 42: reduce/reduce conflict  (red'ns 75 and 77) on GREATER
 42: reduce/reduce conflict  (red'ns 75 and 77) on GREATER_EQUAL
 42: reduce/reduce conflict  (red'ns 75 and 77) on AND
 42: reduce/reduce conflict  (red'ns 75 and 77) on OR
 42: reduce/reduce conflict  (red'ns 75 and 77) on ASSIGN
 42: reduce/reduce conflict  (red'ns 75 and 77) on LEFT_PAREN
 42: reduce/reduce conflict  (red'ns 75 and 77) on RIGHT_PAREN
 42: reduce/reduce conflict  (red'ns 75 and 77) on LEFT_BRACKET
 42: reduce/reduce conflict  (red'ns 75 and 77) on RIGHT_BRACKET
 42: reduce/reduce conflict  (red'ns 75 and 77) on SEMICOLON
 42: reduce/reduce conflict  (red'ns 75 and 77) on COMMA
 42: reduce/reduce conflict  (red'ns 75 and 77) on DOT
state 42
	primary_expr:  IDENTIFIER.    (75)
	identifier:  IDENTIFIER.    (77)

	.  reduce 75 (src line 557)


state 43
	primary_expr:  LEFT_PAREN.expression RIGHT_PAREN 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	expression  goto 74
	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 36
	binary_expr  goto 35
	identifier  goto 41

state 44
	type:  LEFT_BRACKET IDENTIFIER RIGHT_BRACKET type.    (25)

	.  reduce 25 (src line 248)


state 45
	function_decl:  FUNC identifier LEFT_PAREN parameter_list RIGHT_PAREN.type block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN parameter_list RIGHT_PAREN.block_stmt 
	function_decl:  FUNC identifier LEFT_PAREN parameter_list RIGHT_PAREN.ARROW type block_stmt 

	IDENTIFIER  shift 12
	LEFT_BRACE  shift 50
	LEFT_BRACKET  shift 11
	ARROW  shift 77
	.  error

	block_stmt  goto 76
	type  goto 75
	identifier  goto 10

state 46
	parameter_list:  parameter_list COMMA.parameter 

	IDENTIFIER  shift 12
	.  error

	parameter  goto 78
	identifier  goto 29

state 47
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN type.block_stmt 

	LEFT_BRACE  shift 50
	.  error

	block_stmt  goto 79

state 48
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN block_stmt.    (13)

	.  reduce 13 (src line 160)


state 49
	function_decl:  FUNC identifier LEFT_PAREN RIGHT_PAREN ARROW.type block_stmt 

	IDENTIFIER  shift 12
	LEFT_BRACKET  shift 11
	.  error

	type  goto 80
	identifier  goto 10

state 50
	block_stmt:  LEFT_BRACE.statement_list RIGHT_BRACE 
	statement_list: .    (27)

	.  reduce 27 (src line 262)

	statement_list  goto 81

state 51
	parameter:  identifier type.    (20)

	.  reduce 20 (src line 215)


state 52
	struct_decl:  STRUCT identifier LEFT_BRACE struct_field_list RIGHT_BRACE.    (16)

	.  reduce 16 (src line 191)


state 53
	struct_field_list:  struct_field_list struct_field.    (22)

	.  reduce 22 (src line 227)


state 54
	struct_field:  identifier type.SEMICOLON 

	SEMICOLON  shift 82
	.  error


state 55
	global_var_decl:  type identifier ASSIGN expression SEMICOLON.    (9)

	.  reduce 9 (src line 118)


state 56
	binary_expr:  binary_expr PLUS.binary_expr 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 36
	binary_expr  goto 83
	identifier  goto 41

state 57
	binary_expr:  binary_expr MINUS.binary_expr 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 36
	binary_expr  goto 84
	identifier  goto 41

state 58
	binary_expr:  binary_expr STAR.binary_expr 

	IDENTIFIER  shift 42
	MINUS  shift 38
	NOT  shift 39
	LEFT_PAREN  shift 43
	.  error

	primary_expr  goto 40
	call_expr  goto 37
	unary_expr  goto 36
	binary_expr  goto 85
	identifier  goto 41

state 59
	binary_expr:  binary_expr SLASH.binary_expr 
